Money Manager 24.9.2.1
* Сборка переключена на JDK 22.0.2 из-за падений на JDK 23
* Скорректированы параметры запуска JVM на Linux
* Удален Maven cache